kubernetes/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chatapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chatapp
      labels:
        app: backend
    spec:
      containers:
      - name: backend-chatapp
        image: udaypagidimari/chat-backend:latest
        ports:
        - containerPort: 5001
