kubernetes/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chatapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-pod
  template:
    metadata:
      name:  frontend-pod
      namespace: chatapp
      labels:
        app: frontend-pod
    spec:
      containers:
      - name: frontend-chatapp
        image: udaypagidimari/chat-frontend:latest
        ports:
        - containerPort: 80
