kubernetes/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chatapp
spec:
  selector:
    app: frontend-pod
  ports:
  - port: 80
    targetPort: 80
