kubernetes/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: chatapp
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
